[gd_scene load_steps=6 format=3 uid="uid://bxg522oxm3jue"]

[ext_resource type="Script" path="res://Scenes/bullet_explosion.gd" id="1_4gmo1"]
[ext_resource type="Texture2D" uid="uid://coyqjg3v67cdx" path="res://Asset/462537357_27112846355026836_3264761179428583874_n.png" id="2_1ega5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_jouyx"]
atlas = ExtResource("2_1ega5")
region = Rect2(16, 16, 16, 16)

[sub_resource type="CircleShape2D" id="CircleShape2D_sn4vt"]
radius = 0.8

[sub_resource type="CircleShape2D" id="CircleShape2D_mcq0p"]
radius = 5.33333

[node name="Bullet" type="Area2D"]
show_behind_parent = true
collision_layer = 0
collision_mask = 2
script = ExtResource("1_4gmo1")

[node name="BulletSprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
scale = Vector2(0.15, 0.15)
texture = SubResource("AtlasTexture_jouyx")

[node name="HitBox" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_sn4vt")

[node name="ExplosionSprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0.326)
scale = Vector2(0.75, 0.75)
texture = SubResource("AtlasTexture_jouyx")

[node name="ExplosionArea" type="Area2D" parent="ExplosionSprite"]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 2

[node name="ExplosionHitbox" type="CollisionShape2D" parent="ExplosionSprite/ExplosionArea"]
shape = SubResource("CircleShape2D_mcq0p")
debug_color = Color(0.81126, 0.400067, 0.258495, 0.42)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_entered" from="ExplosionSprite/ExplosionArea" to="." method="_on_explosion_area_body_entered"]
